# QLinear

./: .gitignore  QLinear.cabal  README.md  qlinear.cabal  stack.yaml
src/: QLinear.hs
src/Internal/: Determinant.hs  Identity.hs  Index.hs  Matrix.hs  Operations.hs
src/Internal/Integration/Linear/: From.hs  To.hs
src/Internal/Quasi/: Parser.hs  Quasi.hs
src/Internal/Quasi/Matrix/: Parser.hs  Quasi.hs
src/Internal/Quasi/Matrix/Expression/: Parser.hs  Quote.hs
src/Internal/Quasi/Matrix/Pattern/: Quote.hs
src/Internal/Quasi/Operator/: Parser.hs  Quasi.hs
src/QLinear/: Identity.hs  Index.hs  Matrix.hs  Operations.hs
src/QLinear/Constructor/: Matrix.hs  Operator.hs
src/QLinear/Integration/Linear/: From.hs  To.hs
test/: Main.hs
