name:                QLinear
version:             0.1.0.0
homepage:            https://github.com/githubuser/QLinear#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     QLinear
  other-modules:       Internal.Determinant,
                       Internal.Matrix,
                       Internal.Identity,
                       Internal.Operations
  build-depends:       base >= 4.7 && < 5,
                       split
  default-language:    Haskell2010
  default-extensions: BangPatterns, DataKinds

source-repository head
  type:     git
  location: https://github.com/githubuser/QLinear
