name:                qlinear
version:             0.1.0.0
homepage:            https://github.com/githubuser/QLinear#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     QLinear
  other-modules:       Internal.Determinant,
                       Internal.Matrix,
                       Internal.Identity,
                       Internal.Index,
                       Internal.Operations,
                       Internal.Quasi.Quasi,
                       Internal.Quasi.Parser,
                       Internal.Quasi.Matrix.Parser,
                       Internal.Quasi.Matrix.Quasi,
                       Internal.Quasi.Operator.Parser,
                       Internal.Quasi.Operator.Quasi,
                       Internal.Integration.Linear.From,
                       Internal.Integration.Linear.To
  build-depends:       base >= 4.7 && < 5,
                       split,
                       template-haskell,
                       parsec,
                       haskell-src-exts,
                       haskell-src-meta,
                       linear
  default-language:    Haskell2010
  default-extensions:  DataKinds, BlockArguments

test-suite UnitTests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test, src
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       split,
                       template-haskell,
                       parsec,
                       haskell-src-exts,
                       haskell-src-meta,
                       linear
  other-modules:       Internal.Determinant,
                       Internal.Matrix,
                       Internal.Identity,
                       Internal.Index,
                       Internal.Operations,
                       Internal.Quasi.Quasi,
                       Internal.Quasi.Parser,
                       Internal.Quasi.Matrix.Parser,
                       Internal.Quasi.Matrix.Quasi,
                       Internal.Quasi.Operator.Parser,
                       Internal.Quasi.Operator.Quasi
  default-language:    Haskell2010
  default-extensions:  DataKinds, BlockArguments, TemplateHaskell, QuasiQuotes, TypeApplications

source-repository head
  type:     git
  location: https://github.com/githubuser/QLinear
