cabal-version:  3.0
name:           qlinear
version:        0.1.2.0
synopsis:       Typesafe library for linear algebra
description:    Please see the README on GitHub at <https://github.com/JuniorGarbageCollector/QLinear>
category:       Math
homepage:       https://github.com/JuniorGarbageCollector/QLinear#readme
bug-reports:    https://github.com/JuniorGarbageCollector/QLinear/issues
author:         JuniorGarbageCollector
maintainer:     GooseDB@yandex.ru
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/JuniorGarbageCollector/QLinear

library
  exposed-modules:
      Internal.Determinant
      Internal.Matrix
      QLinear
      QLinear.Constructor.Matrix
      QLinear.Constructor.Operator
      QLinear.Identity
      QLinear.Index
      QLinear.Integration.Linear.From
      QLinear.Integration.Linear.To
      QLinear.Matrix
      QLinear.Operations
  other-modules:
      Internal.Quasi.Matrix.Expression.Parser
      Internal.Quasi.Matrix.Expression.Quote
      Internal.Quasi.Matrix.Pattern.Quote
      Internal.Quasi.Matrix.Quasi
      Internal.Quasi.Operator.Parser
      Internal.Quasi.Operator.Quasi
      Internal.Quasi.Parser
      Internal.Quasi.Quasi
  hs-source-dirs:
      src
  build-depends:
      base >=4.13.0 && < 4.15
    , haskell-src-exts >=1.23.1 && <1.24
    , haskell-src-meta >=0.8.5 && <0.9
    , linear >=1.21.1 && <1.22
    , parsec >=3.1.13 && <3.2
    , split >=0.2.3 && <0.3
    , template-haskell >= 2.16
  default-language: Haskell2010
  ghc-options: -Wall

test-suite UnitTests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base,
                       hspec,
                       split,
                       template-haskell,
                       parsec,
                       haskell-src-exts,
                       haskell-src-meta,
                       linear,
                       qlinear
  default-language:    Haskell2010
